--- a/src/components/Layout/ProjectLayout.css
+++ b/src/components/Layout/ProjectLayout.css
@@ -1,5 +1,5 @@
 .layout-content {
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
     /*height: 100vh;*/
     background-color: #f7f7f7;
@@ -30,8 +30,7 @@
 
 .content-text {
     padding: 30px;
-
-
+    font-size: 15pt;
 }
 
 .slideshow {
@@ -44,7 +43,20 @@
     max-width: 100%;
 }
 
-@media screen and (max-width: 999px){
+@media screen and (min-width: 1401px) {
+    .layout-content {
+        width: 70%;
+        margin: 0 auto;
+        background-color: #f7f7f7;
+        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+    }
+}
+
+@media screen and (max-width: 1400px){
+    .layout-content {
+        width: 70%;
+    }
+
     .content-div {
         display: block;
         width: 100%;
